# Bet_Daemon_Agent

./: .env  README.md  config.py  ecosystem.config.cjs  edge_detector.py  main.py  models.py  notifier.py  poisson_model.py  pyproject.toml  results_checker.py  vault_writer.py
docs/superpowers/plans/: 2026-05-26-apuestas-daemon-v2.md
docs/superpowers/specs/: 2026-05-26-apuestas-daemon-v2-design.md
scrapers/: fixtures.py  news.py  odds.py  polymarket.py  sports.py  xg.py
tests/: test_combinada.py  test_consensus.py  test_edge_detector.py  test_notifier.py  test_poisson_model.py  test_results_checker.py  test_sports.py  test_vault_writer.py  test_xg.py
