[project]
name = "apuestas-daemon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "understat>=0.1",
    "aiohttp>=3.9",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
